--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ Django==5.0.6
 django-browser-reload==1.13.0
 djlint==1.34.1
 EditorConfig==0.12.4
+gunicorn==22.0.0
 html-tag-names==0.1.2
 html-void-elements==0.1.0
 jsbeautifier==1.15.1
 json5==0.9.25
+packaging==24.1
 pathspec==0.12.1
 PyYAML==6.0.1
 regex==2023.12.25
