--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ jsbeautifier==1.15.1
 json5==0.9.25
 packaging==24.1
 pathspec==0.12.1
+python-dotenv==1.0.1
 PyYAML==6.0.1
 regex==2023.12.25
 six==1.16.0
