--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "npx tailwindcss -i ./static/css/input.css -o ./static/css/output.css --watch"
+  },
   "devDependencies": {
     "daisyui": "^4.12.2",
     "tailwindcss": "^3.4.4"
